--- a/introduction/installation.mdx
+++ b/introduction/installation.mdx
@@ -31,6 +31,15 @@ Although a bit slower, you can also install directly with cargo:
 cargo install cargo-shuttle
 ```
 
+### Arch Linux
+
+`cargo-shuttle` can be installed from the [community repository](https://archlinux.org/packages/community/x86_64/cargo-shuttle) using [pacman](https://wiki.archlinux.org/title/Pacman):
+
+```sh
+pacman -S cargo-shuttle
+```
+
+> This is a community package maintained by [orhun](https://github.com/orhun).
 ## Login
 
 After installing, log in with:
