--- a/fullstack/saas-template.mdx
+++ b/fullstack/saas-template.mdx
@@ -1,5 +1,5 @@
 ---
-title: "SaaS Template"
+title: "SaaS Starter Template"
 ---
 ### Introduction
 We've created a SaaS template that you can use to bootstrap your apps faster & quicker in JavaScript while using the power of Rust.
