--- a/introduction/how-shuttle-works.mdx
+++ b/introduction/how-shuttle-works.mdx
@@ -26,7 +26,7 @@ The gRPC server receives commands from the deployers, such as `start` and `stop`
 
 ### Provisioning Resources
 
-![Image](/image/shuttle)
+![Image](/images/shuttle-macros.png)
 
 As you can see in the example above, the 3 annotations that you are passing to your `main()` function, at compile time, get provisioned on our end.
 
@@ -66,7 +66,7 @@ async fn axum(
 }
 ```
 
-**Postgres Database*
+**Postgres Database**
 
 ```rust
 #[shuttle_runtime::main]
