--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -6,8 +6,8 @@ This section is aimed at collecting common issues users have to provide quick de
 
 <AccordionGroup>
   <Accordion title="I get an error about protoc not being installed, or protoc being the wrong version.">
-    Since Shuttle v0.12.0, `protoc` is a requirement to install `cargo-shuttle` and to use `cargo-runtime`.
-    To install `protoc`, check out our [installation guide](./installing-protoc).
+    Since Shuttle v0.18.0, `protoc` is no longer required to use Shuttle. If you encounter the above error,
+    we recommend you upgrade to the latest version of `cargo-shuttle` and other Shuttle crates.
   </Accordion>
   <Accordion title="I've updated Shuttle and my project isn't working anymore.">
     If you've recently updated shuttle, in order to get your project back up, you need to run:
