Add example of `shuttle logs --follow`
This commit adds an https://asciinema.org recording of what happens when you view your shuttle logs.

--- a/introduction/telemetry.mdx
+++ b/introduction/telemetry.mdx
@@ -63,3 +63,5 @@ And last but not least, if you'd like a live feed of your logs, run:
 ```bash
 cargo shuttle logs --follow
 ```
+
+[![asciicast](https://asciinema.org/a/kwwJB72isJlJNm7IF6zaNwIDA.svg)](https://asciinema.org/a/kwwJB72isJlJNm7IF6zaNwIDA)
